# word-error-rate-cli

./: .gitignore  README.md  make.bat  pyproject.toml
source/: conf.py  index.rst
test_data/: actual.txt
test_data/Actual/: test_data_1.txt  test_data_2.txt  test_data_3.txt
test_data/Expected/: test_data_1.txt  test_data_2.txt  test_data_3.txt
wer/: __main__.py  cli.py
