[project]
name = "word-error-rate-cli"
version = "0.1.0"
description = "Calculate the word error rate (WER) from provided correct and actual text file(s)."
authors = [
    { name = "camball", email = "67163069+camball@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["jiwer >=3.0.3", "prettytable >=3.10.0"]

[dependency-groups]
dev = [
    "sphinx >=8.1.3",
    "sphinx-autoapi >=3.3.3",
    "myst-parser >=4.0.0",
    "esbonio >=0.16.5",
    "furo >=2024.8.6",
]

[build-system]
requires = ["uv_build>=0.7.9,<0.8.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "wer"
module-root = ""

[project.scripts]
wer = "wer.cli:main"
